Changed Time format

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>This JENKINS Practice Webserver @ 7th Aug 2025 at 05:20 PM </h1>
+    <h2>We are at Banaswadi PG.</h2>
 </body>
 </html>
