--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>This JENKINS Practice Webserver @ 7th Aug 2025 at 05:20 PM </h1>
     <h2>We are at Banaswadi PG.</h2>
+    <h2>Thank yiu.</h2>
 </body>
 </html>
